# b3_utils

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
CoPilot/: WASM.js
examples/: .env  Cargo.toml  README.md  build.sh  canister_ids.json  dfx-start.sh  dfx.json  package.json  test-path.sh
examples/all_in_one/: Cargo.toml  all_in_one.did
examples/all_in_one/src/: lib.rs  receipt.rs  test.rs  transaction.rs  transfer.rs
examples/http_payment/: Cargo.toml
examples/http_request/: Cargo.toml  http_request.did
examples/http_request/src/: cost.rs  http.rs  lib.rs
examples/payment/: README.md  package.json  webpack.config.js
examples/payment/src/payment_backend/: Cargo.toml  payment_backend.did
examples/payment/src/payment_backend/src/: lib.rs
examples/payment/src/payment_frontend/src/: App.jsx  Balance.jsx  actor.js  index.html  index.jsx
examples/rpc_payment/: Cargo.toml  rpc_payment.did
examples/rpc_payment/src/: lib.rs
examples/stable_memory/: Cargo.toml  candid.did  stable_memory.did
examples/stable_memory/src/: lib.rs
examples/vetkd/: webpack.config.js
examples/vetkd/src/system_api/: Cargo.toml
examples/vetkd/src/vetkd_backend/: Cargo.toml
examples/vetkd_notes/: Cargo.toml  candid.did
examples/vetkd_notes/frontend/: package.json  rollup.config.js  tailwind.config.js  tsconfig.json
examples/vetkd_notes/frontend/src/lib/: actor.ts  backend.ts  crypto.ts
examples/vetkd_notes/frontend/src/store/: notes.ts
examples/vetkd_notes/src/: lib.rs
src/: api.rs  call.rs  constants.rs  courier.rs  environment.rs  error.rs  http.rs  ledger.rs  lib.rs  logs.rs  memory.rs  metadata.rs  mocks.rs  nonce.rs  notifier.rs  outcall.rs  owner.rs  partition.rs  principal.rs  rpc.rs  sha2.rs  status.rs  subaccount.rs  timestamp.rs  types.rs  utils.rs  vetkd.rs  wasm.rs
src/api/: app.rs  cycles.rs  error.rs  inter.rs  inter_call.rs  types.rs
src/api/app/: bugs.rs  error.rs
src/api/inter/: error.rs  traits.rs
src/call/: error.rs  traits.rs
src/constants/: pricipals.rs  test.rs
src/http/: builder.rs  cost.rs  test.rs
src/ledger/: icrc.rs  identifier copy.rs  identifier.rs  timestamp.rs  types.rs
src/ledger/constants/: constants.rs  cycles.rs  memo.rs
src/ledger/currency/: amount.rs
src/ledger/currency/amount/: test.rs
src/ledger/icrc/: account.rs  error.rs  icrc1.rs  icrc2.rs  metadata.rs  test.rs  types.rs  value.rs
src/ledger/icrc/account/: test.rs
src/ledger/identifier/: error.rs  test.rs
src/ledger/timestamp/: test.rs
src/ledger/types/: system.rs  wallet.rs
src/ledger/types/icp/: transfer.rs
src/ledger/types/wallet/: canister.rs  error.rs
src/logs/: store.rs  test.rs
src/memory/: backup.rs  base.rs  error.rs  helper.rs  main.rs  partitions.rs  store.rs  test.rs  timer.rs  traits.rs  types.rs
src/memory/backup/: store.rs  test.rs
src/memory/base/: backup.rs  store.rs  test.rs  timer.rs
src/memory/main/: backup.rs  test.rs  timer.rs
src/memory/partitions/: key.rs  name.rs
src/memory/timer/: test.rs
src/metadata/: test.rs  value.rs
src/nonce/: traits.rs
src/outcall/: test.rs
src/partition/: error.rs  main.rs  store.rs  test.rs
src/partition/main/: test.rs  timer.rs
src/sha2/: context.rs  sha256.rs  sha512.rs
src/subaccount/: test.rs  traits.rs
src/timestamp/: traits.rs
src/utils/: encoder.rs  ic.rs
src/vetkd/: pairing.rs
src/wasm/: store.rs  test.rs  traits.rs  types.rs  utils.rs
