[package]
name = "b3_utils"
version = "0.11.0"
edition = "2021"
description = "Utility functions for building on the Internet Computer"
license = "MIT"
readme = "./README.md"

[dependencies]
ic-cdk = { version = "0.15.0", features = ["transform-closure"] }
serde = { version = "1.0", features = ["derive"] }
candid = "0.10"
hex = { version = "0.4", features = ["serde"] }
serde_bytes = "0.11"
num-traits = { version = "0.2", optional = true }
crc32fast = { version = "1.4", optional = true }
sha2 = { version = "0.10", optional = true }
subtle = { version = "2.5", optional = true }
serde_json = { version = "1.0", optional = true }
ic-stable-structures = { version = "0.6.3", optional = true }
ic_bls12_381 = { version = "0.8", optional = true, default-features = false, features = [
    "pairings",
    "alloc",
    "experimental",
] }

[features]
exprimental_vetkd = ["ic_bls12_381", "subtle"]
stable_memory = ["ic-stable-structures"]
ledger = ["crc32fast", "sha2", "num-traits", "wasm"]
owner = ["stable_memory"]
sha256 = ["sha2"]
wasm = ["sha2"]
rpc = ["serde_json"]
logging = []
