[package]
name = "b3_utils"
version = "0.13.1"
edition = "2021"
description = "Utility functions for building on the Internet Computer"
license = "MIT"
readme = "./README.md"

[dependencies]
ic-cdk = { version = "0.16.0", features = ["transform-closure"] }
serde = { version = "1.0.204", features = ["derive"] }
candid = "0.10.10"
hex = { version = "0.4.3", features = ["serde"] }
serde_bytes = "0.11.15"
enum_dispatch = "0.3.13"
num-traits = { version = "0.2.19", optional = true }
crc32fast = { version = "1.4.2", optional = true }
sha2 = { version = "0.10.8", optional = true }
evm-rpc-canister-types = { version = "1.0.0", optional = true }
ic-stable-structures = "0.6.5"
serde_json = { version = "1.0.68", optional = true }
ic-metrics-encoder = "1.1.1"

# experimental features - do not update
ic_bls12_381 = { version = "0.8.0", optional = true, default-features = false, features = [
    "pairings",
    "alloc",
    "experimental",
] }
subtle = { version = "2.5.0", optional = true }

[features]
exprimental_vetkd = ["ic_bls12_381", "subtle"]
ledger = ["crc32fast", "sha2", "num-traits", "wasm"]
notifier = ["serde_json"]
sha256 = ["sha2"]
wasm = ["sha2"]
rpc = ["evm-rpc-canister-types"]
logging = []
