[workspace]
members = [
    "all_in_one",
    "http_request",
    "stable_memory",
    "vetkd/src/vetkd_backend",
    "vetkd/src/system_api",
    "http_payment",
    "rpc_payment",
]
resolver = "1"

[workspace.dependencies]
ic-cdk = "0.15.0"
candid = "0.10"
ic0 = "0.23.0"
b3_utils = { path = "../" }
