[package]
name = "all_in_one"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"]

[dependencies]
ic-cdk = { workspace = true }
candid = { workspace = true }
b3_utils = { workspace = true, features = [
    "exprimental_vetkd",
    "stable_memory",
    "ledger",
    "wasm",
    "logging",
    "owner",
] }
