[package]
name = "rpc_payment"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
b3_utils = { workspace = true, features = ["ledger", "rpc"] }
candid = { workspace = true }
ic-cdk = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
