[package]
name = "payment_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
b3_utils = { workspace = true, features = ["ledger", "owner"] }
candid = "0.9.9"
ic-cdk = "0.11.0"
serde = "1.0.188"
serde_derive = "1.0.188"
serde_json = "1.0.107"
